@@ -3,17 +3,13 @@ package com.ryu.minecraft.mod.neoforge.neostorage;
 import org.slf4j.Logger;
 
 import com.mojang.logging.LogUtils;
+import com.ryu.minecraft.mod.neoforge.neostorage.setup.SetupBlocks;
 import com.ryu.minecraft.mod.neoforge.neostorage.setup.SetupCreativeModTab;
 import com.ryu.minecraft.mod.neoforge.neostorage.setup.SetupItems;
 
 import net.minecraft.client.Minecraft;
 import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.core.registries.Registries;
-import net.minecraft.world.item.CreativeModeTab;
-import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.level.block.state.BlockBehaviour;
-import net.minecraft.world.level.material.MapColor;
 import net.neoforged.api.distmarker.Dist;
 import net.neoforged.bus.api.IEventBus;
 import net.neoforged.bus.api.SubscribeEvent;
@@ -25,8 +21,6 @@ import net.neoforged.fml.event.lifecycle.FMLClientSetupEvent;
 import net.neoforged.fml.event.lifecycle.FMLCommonSetupEvent;
 import net.neoforged.neoforge.common.NeoForge;
 import net.neoforged.neoforge.event.server.ServerStartingEvent;
-import net.neoforged.neoforge.registries.DeferredBlock;
-import net.neoforged.neoforge.registries.DeferredRegister;
 
 // The value here should match an entry in the META-INF/neoforge.mods.toml file
 @Mod(NeoStorage.MODID)
@@ -34,24 +28,12 @@ public class NeoStorage {
     public static final String MODID = "neostorage";
     public static final Logger LOGGER = LogUtils.getLogger();
     
-    // Create a Deferred Register to hold Blocks which will all be registered under the "neostorage" namespace
-    public static final DeferredRegister.Blocks BLOCKS = DeferredRegister.createBlocks(MODID);
-    // Create a Deferred Register to hold CreativeModeTabs which will all be registered under the "neostorage" namespace
-    public static final DeferredRegister<CreativeModeTab> CREATIVE_MODE_TABS = DeferredRegister
-            .create(Registries.CREATIVE_MODE_TAB, MODID);
-    
-    // Creates a new Block with the id "neostorage:example_block", combining the namespace and path
-    public static final DeferredBlock<Block> EXAMPLE_BLOCK = BLOCKS.registerSimpleBlock("example_block",
-            BlockBehaviour.Properties.of().mapColor(MapColor.STONE));
-    
-    // The constructor for the mod class is the first code that is run when your mod is loaded.
-    // FML will recognize some parameter types like IEventBus or ModContainer and pass them in automatically.
     public NeoStorage(IEventBus modEventBus, ModContainer modContainer) {
         // Register the commonSetup method for modloading
         modEventBus.addListener(this::commonSetup);
         
         // Register the Deferred Register to the mod event bus so blocks get registered
-        BLOCKS.register(modEventBus);
+        SetupBlocks.BLOCKS.register(modEventBus);
         SetupItems.ITEMS.register(modEventBus);
         SetupCreativeModTab.CREATIVE_MODE_TABS.register(modEventBus);
         
