@@ -1,5 +1,5 @@
 {
-  "block.neostorage.example_block": "Example Block",
+  "block.neostorage.toolstorage": "Tool Storage",
   
   "item.neostorage.neotool": "NeoTool item",
   
